# embedded_gpui

./: .gitignore  Cargo.toml  DESIGN.md  README.md  TODO.md  rust-toolchain.toml
.github/workflows/: ci.yml
embedded_gpui/: Cargo.toml
embedded_gpui/src/: embedded_gpui.rs  guest.rs  host.rs  registry.rs
embedded_gpui/src/guest/: objects.rs  shared.rs  text_system.rs  window.rs
embedded_gpui/src/host/: plugin_element.rs  shared_entities.rs
embedded_gpui/wit/: plugin.wit
embedded_gpui_macros/: Cargo.toml
embedded_gpui_macros/src/: embedded_gpui_macros.rs
embedded_gpui_util/: Cargo.toml
embedded_gpui_util/src/: embedded_gpui_util.rs
example/host/: Cargo.toml
example/host/src/: main.rs
example/plugin/: Cargo.toml
example/plugin/src/: example_plugin.rs
example/schema/: Cargo.toml
example/schema/src/: example_schema.rs
example_plugin/: Cargo.toml
example_plugin/src/: example_plugin.rs
plugin/: Cargo.toml
plugin/src/: gpui_plugin.rs  shared.rs  text_system.rs  window.rs
shared/: Cargo.toml
shared/macros/: Cargo.toml
shared/macros/src/: gpui_embedded_shared_macros.rs
shared/src/: gpui_embedded_shared.rs
src/: gpui_embedded.rs  main.rs  plugin_element.rs
test_plugin/: Cargo.toml
test_plugin/src/: test_plugin.rs
tests/: Cargo.toml  objects.rs  shared_entities.rs
tests/schema/: Cargo.toml
tests/schema/src/: test_schema.rs
tests/test_plugin/: Cargo.toml
tests/test_plugin/src/: test_plugin.rs
utils/: Cargo.toml
utils/src/: embedded_gpui_utils.rs
