[workspace]
members = [
    "embedded_gpui",
    "embedded_gpui_macros",
    "embedded_gpui_util",
    "example/host",
    "tests",
]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

# Wasm compilation is unusably slow when the compiler itself is unoptimized.
[profile.dev.package.wasmtime]
opt-level = 3
[profile.dev.package.wasmtime-environ]
opt-level = 3
[profile.dev.package.cranelift-codegen]
opt-level = 3

# Replicated from zed's workspace: patches do not propagate through git dependencies.
[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
calloop = { git = "https://github.com/zed-industries/calloop" }
