[package]
name = "embedded_gpui_util"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "Common object-capability patterns for embedded GPUI shared objects"

[lints]
workspace = true

[lib]
path = "src/embedded_gpui_util.rs"

[dependencies]
anyhow = "1.0"
embedded_gpui = { path = "../embedded_gpui" }
gpui = { git = "https://github.com/zed-industries/zed.git", branch = "gpui-embedded-in-gpui", default-features = false }
log = "0.4"
