[package]
name = "gpui_embedded_shared"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "Schema traits for entities shared across the gpui_embedded wasm boundary"

[lints]
workspace = true

[lib]
path = "src/gpui_embedded_shared.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
gpui = { git = "https://github.com/zed-industries/zed.git", branch = "gpui-embedded-in-gpui", default-features = false }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
