[package]
name = "tests"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "Integration tests for embedded_gpui (with their wasm guest fixture in test_plugin/)"

[lints]
workspace = true

[[test]]
name = "shared_entities"
path = "shared_entities.rs"

[dev-dependencies]
anyhow = "1.0"
embedded_gpui = { path = "../embedded_gpui" }
test_schema = { path = "schema" }
gpui = { git = "https://github.com/zed-industries/zed.git", branch = "gpui-embedded-in-gpui", features = ["test-support"] }
rand = "0.9"
