[package]
name = "embedded_gpui_utils"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "Common object-capability patterns for embedded GPUI shared entities"

[lints]
workspace = true

[lib]
path = "src/embedded_gpui_utils.rs"

[dependencies]
anyhow = "1.0"
gpui = { git = "https://github.com/zed-industries/zed.git", branch = "gpui-embedded-in-gpui", default-features = false }
gpui_embedded_shared = { path = "../shared" }
