[package]
name = "example_host"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "Demo host: a native GPUI window embedding the example plugin"

[lints]
workspace = true

[dependencies]
embedded_gpui = { path = "../../embedded_gpui" }
example_schema = { path = "../schema" }
env_logger = "0.11"
gpui = { git = "https://github.com/zed-industries/zed.git", branch = "gpui-embedded-in-gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed.git", branch = "gpui-embedded-in-gpui", features = ["font-kit", "wayland", "x11"] }
log = "0.4"
