[package]
name = "example_plugin"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "Demo GPUI plugin that runs inside the gpui_embedded host"

# Deliberately not part of the root workspace: compiled to wasm32-wasip2.
[workspace]

[lib]
path = "src/example_plugin.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
gpui = { git = "https://github.com/zed-industries/zed.git", branch = "gpui-embedded-in-gpui", default-features = false }
embedded_gpui = { path = "../../embedded_gpui" }
example_schema = { path = "../schema" }
image = "0.25"

[profile.release]
lto = true
opt-level = "s"

[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
