[package]
name = "example_schema"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "Shared-entity schemas for the embedded_gpui demo, used by both example/host and example/plugin"

[lints]
workspace = true

[lib]
path = "src/example_schema.rs"

[dependencies]
embedded_gpui = { path = "../../embedded_gpui" }
gpui = { git = "https://github.com/zed-industries/zed.git", branch = "gpui-embedded-in-gpui", default-features = false }
